2007-10-21  Simon Budig  <simon@gimp.org>

        * plg-ins/script-fu/scheme-wrapper.c: Add comment regarding
	  the safe-foreign issue.

2007-10-21  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c: Reverted changes in handling
	of string arrays to stay backwards compatible (see bug #317634).

	* plug-ins/script-fu/scripts/font-map.scm: Updated based on change
	in handling of string arrays listed above.

2007-10-21  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/fade-dialog.c (fade_dialog_new): revert change below.

	* app/paint-funcs/paint-funcs.c (replace_inten_pixels): also honor
	the passed opacity when there is no mask. Fixes blending in
	replace mode then where is no selection.

2007-10-21  Sven Neumann  <sven@gimp.org>

	* app/dialogs/fade-dialog.c (fade_dialog_new): select "Normal"
	when the mode of the operation is "Replace". This is incorrect but
	it makes the dialog a lot easier to use.

2007-10-19  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c: tiny cosmetic cleanups.

2007-10-18  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	introduced a utility function to retrieve the screen and monitor.

2007-10-18  Sven Neumann  <sven@gimp.org>

	* modules/colorsel_cmyk_lcms.c: ellipsize the profile label. If
	possible, use the profile description as we do in other places.

2007-10-18  Michael Natterer  <mitch@gimp.org>

	* libgimpmodule/gimpmoduledb.c (gimp_module_db_module_initialize):
	simply check for G_MODULE_SUFFIX and remove utility function
	is_valid_module_name().

2007-10-18  Sven Neumann  <sven@gimp.org>

	* app/config/gimpcoreconfig.c: lower the upper limit for
	"undo-levels", mainly for getting a smaller entry in the
	Preferences dialog.

	* libgimpwidgets/gimpmemsizeentry.c (gimp_memsize_entry_new):
	seven digits are enough for a memsize entry.
	
2007-10-18  Sven Neumann  <sven@gimp.org>
