@@ -221,19 +221,19 @@ static const QuantInfo quant_info[] =
   {   436,   996, 2, 1, -2, "ACD ?", "?", -92 },
   {   664,  1499, 2, 1, -2, "ACD ?", "?", -88 },
   {  1590,  3556, 2, 2, -2, "ACD ?", "?", -71 },
-  {   109,   171, 1, 1,  2, "Adobe Photoshop CS or CS2", "quality 12", -98 },
-  {   303,   466, 1, 1,  2, "Adobe Photoshop CS or CS2, Camera Raw 3", "quality 11", -95 },
-  {   535,   750, 1, 1,  2, "Adobe Photoshop 7.0 (or CS2)", "quality 10", -93 },
-  {   668,   830, 1, 1,  2, "Adobe Photoshop 7.0, CS, CS2", "quality 9", -91 },
-  {   794,   895, 1, 1,  2, "Adobe Photoshop 7.0, CS, CS2", "quality 8", -90 },
-  {   971,   950, 1, 1,  2, "Adobe Photoshop CS2", "quality 7", -89 },
-  {   884,   831, 2, 2,  2, "Adobe Photoshop CS2", "quality 6", -90 },
-  {  1032,   889, 2, 2,  2, "Adobe Photoshop CS2", "quality 5", -89 },
-  {  1126,   940, 2, 2,  2, "Adobe Photoshop CS2", "quality 4", -88 },
-  {  1216,   977, 2, 2,  2, "Adobe Photoshop CS2", "quality 3", -88 },
+  {    95,   166, 1, 1,  2, "Adobe Photoshop CS2", "quality 12", -98 },
+  {   232,   443, 1, 1,  2, "Adobe Photoshop CS2", "quality 11", -96 },
+  {   406,   722, 1, 1,  2, "Adobe Photoshop CS2", "quality 10", -93 },
+  {   539,   801, 1, 1,  2, "Adobe Photoshop CS2", "quality 9", -92 },
+  {   649,   853, 1, 1,  2, "Adobe Photoshop CS2", "quality 8", -91 },
+  {   786,   926, 1, 1,  2, "Adobe Photoshop CS2", "quality 7", -90 },
+  {   717,   782, 2, 2,  2, "Adobe Photoshop CS2", "quality 6", -91 },
+  {   844,   849, 2, 2,  2, "Adobe Photoshop CS2", "quality 5", -90 },
+  {   962,   892, 2, 2,  2, "Adobe Photoshop CS2", "quality 4", -89 },
+  {  1068,   941, 2, 2,  2, "Adobe Photoshop CS2", "quality 3", -89 },
   {  1281,   998, 2, 2,  2, "Adobe Photoshop CS2", "quality 2", -87 },
   {  1484,  1083, 2, 2,  2, "Adobe Photoshop CS2", "quality 1", -86 },
-  {  1582,  1108, 2, 2,  2, "Adobe Photoshop 7.0, CS, CS2", "quality 0", -85 },
+  {  1582,  1108, 2, 2,  2, "Adobe Photoshop CS2", "quality 0", -85 },
   {    95,   168, 1, 1,  2, "Adobe Photoshop CS2", "save for web 100", -98 },
   {   234,   445, 1, 1,  2, "Adobe Photoshop CS2", "save for web 90", -96 },
   {   406,   724, 1, 1,  2, "Adobe Photoshop CS2", "save for web 80", -93 },
@@ -244,18 +244,17 @@ static const QuantInfo quant_info[] =
   {  2223,  2464, 2, 2,  2, "Adobe Photoshop CS2", "save for web 30", -74 },
   {  2575,  2903, 2, 2,  2, "Adobe Photoshop CS2", "save for web 20", -70 },
   {  3514,  3738, 2, 2,  2, "Adobe Photoshop CS2", "save for web 10", -60 },
-  {    95,   166, 1, 1,  2, "Adobe Photoshop 7.0, CS, CS2 or Lightroom", "quality 12", -98 },
-  {   232,   443, 1, 1,  2, "Adobe Photoshop CS", "quality 11", -96 },
-  {   649,   853, 1, 1,  2, "Adobe Photoshop 7.0, CS, CS2, Elements 4.0", "quality 8", -91 },
-  {   844,   849, 2, 2,  2, "Adobe Photoshop CS", "quality 5", -90 },
-  {   962,   892, 2, 2,  2, "Adobe Photoshop CS", "?", -89 },
-  {   406,   722, 1, 1,  2, "Adobe Photoshop 7.0", "quality 10", -93 },
-  {   539,   801, 1, 1,  2, "Adobe Photoshop 5.0, 7.0", "quality 9", -92 },
-  {   786,   926, 1, 1,  2, "Adobe Photoshop 7.0, CS2", "quality 7", -90 },
-  {   717,   782, 2, 2,  2, "Adobe Photoshop 5.0", "?", -91 },
-  {  1068,   941, 2, 2,  2, "Adobe Photoshop 4.0", "?", -89 },
+  {   535,   750, 1, 1,  2, "Adobe Photoshop 7.0", "quality 10", -93 },
+  {   109,   171, 1, 1,  2, "Adobe Photoshop CS", "quality 12", -98 },
+  {   303,   466, 1, 1,  2, "Adobe Photoshop CS, Camera Raw 3", "quality 11", -95 },
+  {   668,   830, 1, 1,  2, "Adobe Photoshop 7.0, CS", "quality 9", -91 },
+  {   794,   895, 1, 1,  2, "Adobe Photoshop 7.0, CS", "quality 8", -90 },
+  {   971,   950, 1, 1,  2, "Adobe Photoshop CS", "quality 7", -89 },
+  {   884,   831, 2, 2,  2, "Adobe Photoshop CS", "quality 6", -90 },
+  {  1032,   889, 2, 2,  2, "Adobe Photoshop CS", "quality 5", -89 },
+  {  1126,   940, 2, 2,  2, "Adobe Photoshop CS", "quality 4", -88 },
+  {  1216,   977, 2, 2,  2, "Adobe Photoshop CS", "quality 3", -88 },
   {   339,   670, 1, 1,  2, "Adobe Photoshop ?", "save for web 85", -94 },
-  {   406,   722, 1, 1,  2, "Adobe Photoshop 6.0", "quality 10", -93 },
   {   427,   613, 2, 2,  2, "Adobe Photoshop ?", "?", -94 },
   {   525,   941, 1, 1,  2, "Adobe Photoshop ?", "save for web 75", -92 },
   {   803,  1428, 1, 1,  2, "Adobe Photoshop ?", "save for web 65", -87 },
@@ -263,10 +262,10 @@ static const QuantInfo quant_info[] =
   {  1156,  2116, 1, 1,  2, "Adobe Photoshop ?", "save for web 52", -82 },
   {  1175,  2169, 1, 1,  2, "Adobe Photoshop ?", "save for web 51", -81 },
   {  2272,  2522, 2, 2,  2, "Adobe Photoshop ?", "save for web 29", -73 },
-  {  4028,  4174, 2, 2,  2, "Adobe Photoshop ?", "save for web 3", -55 },
-  {   513,     0, 1, 1,  1, "Adobe Photoshop ?", "?", -93 },
   {  2515,  2831, 2, 2,  2, "Adobe ImageReady", "save for web 22", -70 },
   {  3822,  3975, 2, 2,  2, "Adobe ImageReady", "save for web 6", -57 },
+  {  4028,  4174, 2, 2,  2, "Adobe Photoshop ?", "save for web 3", -55 },
+  {   513,     0, 1, 1,  1, "Adobe Photoshop ?", "?", -93 },
   {   255,   393, 2, 1,  2, "Apple Quicktime 7.1 or 7.2", "?", -96 },
   {   513,   775, 2, 2,  2, "Apple Quicktime 7.2", "?", -93 },
   {   543,   784, 2, 1, -2, "Apple Quicktime 7.1", "?", -92 },
